Codebase audit — 2026-02-22
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>